# antibiotic-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  aggregate_results.py  compose.yaml  flake.nix  predict_function.sh  pyproject.toml  shell.nix
antibiotic_prediction/: SSN_tools.py  aggregate_results.py  cli.py  download_genomes.py  multiple_predict_function.py  multiple_predict_resistance.py  parse_align_rgi.py  predict_function.py  predict_function.sh  predict_function_tools.py  run_antismash7.sh  run_parse_clinker.py  run_rgi.sh
antibiotic_prediction/scripts/: predict_effect.sh  predict_function.sh
assets/: README.html  display.yaml
data/validation_data/: dataset1.csv  dataset1_genomes.txt  dataset2.csv  dataset2_genomes.txt
setup/: env_resistance_prediction.yml  install_antismash.sh  install_rgi.sh
