[project]
name = "antibiotic_prediction"
version = "0.1.0"
description = "Antibiotic prediction workflow"
authors = [
    {name = "Dileep Kishore", email = "kishored@ornl.gov"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
