[project]
name = "antibiotic_prediction"
version = "0.1.0"
description = "Antibiotic prediction workflow"
authors = [
    {name = "Dileep Kishore", email = "kishored@ornl.gov"},
]
dependencies = [
    "biopython>=1.81",
    "numpy>=1.25.1",
    "pandas>=2.0.3",
    "scipy>=1.9.3",
    "scikit-learn>=1.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
