[tool.poetry]
name = "antibiotic-prediction"
version = "0.1.0"
description = "A pipeline to predict antibiotic inhibition of microbes"
authors = ["Dileep Kishore <k.dileep1994@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
clinker = "^0.0.28"
click = "^8.1.7"
xgboost = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
